Adding IDs to results object for AJAX pagination

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -57,6 +57,7 @@
               geoJson.clearLayers()
               geoJson.addData(feature_collection.features)
               drawResults(data)
+              results = data
               if(feature_collection.features.length>0){
                   if(Object.keys(geoJson._layers).length>0){
                       var bounds = geoJson.getBounds()
