--- a/app/views/projects/_search_result.html.erb
+++ b/app/views/projects/_search_result.html.erb
@@ -1,32 +1,9 @@
 <%# encoding: utf-8 %>
 <% cache "projects/#{search_result.id}/search_result/#{current_user_is_aiddata ? "aiddata" : "non_aiddata" }" do %>
-	<tr>
-		<td><%= search_result.id %> </td>
-		<td><%= search_result.donor ? search_result.donor.name : '—' %> </td>
-		<td><%= link_to active_or_inactive(search_result), search_result %></td> 
-		<td><%= search_result.year ? search_result.year : '—' %></td>
-		<td><%= search_result.country_name.length>0 ? search_result.country_name.join(', ') : '—' %></td>
-		<td><%= search_result.usd_2009 ? "$#{number_with_precision(search_result.usd_2009, :precision => 2, :delimiter => ',')}" : '—' %></td>
-		
+  <% if (search_result.donor.name == 'China') && !(current_user_is_aiddata)  %>
+        <%= render partial: "projects/search_result_index", locals: {search_result: search_result} %>
 
-		<td> <%= current_user_is_aiddata ? search_result.updated_at : "" %></td>
-
-
-		<% if current_user && current_user.owner %>
-			<td>
-				<% if search_result.owner %>
-					<% if search_result.owner == current_user.owner %>
-						<%= link_to "Edit", edit_project_path(search_result) %>
-					<% else %>
-						Owner: <%= link_to search_result.owner.name, search_result.owner %> 
-					<% end %>
-				<% else %>
-					No owner 
-				<% end %>
-
-			</td>
-		<% else %>
-			<td></td>
-		<% end %>
-	</tr>
+  <% elsif current_user_is_aiddata   %>
+        <%= render partial: "projects/search_result_index", locals: {search_result: search_result} %>
+  <% end %>
 <% end %>
